<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <!--我的订单-->
    <LinearLayout
        android:id="@+id/myorder"
        style="@style/me_style">
        <ImageView
            style="@style/me_image"
            android:src="@mipmap/me_myorder"/>

        <TextView
            style="@style/me_text"
            android:text="@string/myorder"/>
    </LinearLayout>
    <!--我的收藏-->
    <LinearLayout
        android:id="@+id/mycollection"
        style="@style/me_style">

        <ImageView
            style="@style/me_image"
            android:src="@mipmap/me_mycollection"/>

        <TextView
            style="@style/me_text"
            android:text="@string/mycollection"/>

    </LinearLayout>

    <!--我的钱包-->
    <LinearLayout
        android:id="@+id/mywallet"
        style="@style/me_style">

        <ImageView
            style="@style/me_image"
            android:src="@mipmap/me_mywallet"/>

        <TextView
            style="@style/me_text"
            android:text="@string/mywallet"/>

    </LinearLayout>
    <!--我的信息-->
    <LinearLayout
        android:id="@+id/myinformation"
        style="@style/me_style">

        <ImageView
            style="@style/me_image"
            android:src="@mipmap/me_myinformation"/>

        <TextView
            style="@style/me_text"
            android:text="@string/myinformation"/>

    </LinearLayout>
</LinearLayout>