<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#FFF"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@mipmap/me_user_background">

        <ImageView
            android:id="@+id/me_myset"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:src="@mipmap/me_set"/>

        <ImageView
            android:id="@+id/me_user_imageview"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/me_user_normal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/me_user_imageview"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/me_user_login"
                style="@style/me_user_text"
                android:text="@string/userlogin"/>

            <TextView
                style="@style/me_user_text"
                android:text="/"/>

            <TextView
                android:id="@+id/me_user_register"
                style="@style/me_user_text"
                android:text="@string/user_register"/>
        </LinearLayout>

    </RelativeLayout>

    <include
        layout="@layout/bottom_me_middle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            style="@style/me_content_notext"/>

        <TextView
            android:id="@+id/me_linkman"
            style="@style/me_content_text"
            android:text="@string/linkman"/>

        <TextView
            style="@style/me_content_notext"/>

        <TextView
            android:id="@+id/me_certification"
            style="@style/me_content_text"
            android:text="@string/certification"/>

        <TextView
            style="@style/me_content_notext"/>

        <TextView
            android:id="@+id/me_releaseroom"
            style="@style/me_content_text"
            android:text="@string/releaseroom"/>

        <TextView
            style="@style/me_content_notext"/>

        <TextView
            android:id="@+id/me_customerservice"
            style="@style/me_content_text"
            android:text="@string/customerservice"/>

        <TextView
            style="@style/me_content_notext"/>

    </LinearLayout>

</LinearLayout>