<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="#FFF"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@mipmap/me_userislogin_background">
        <ImageView
            android:id="@+id/me_owner_myset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:src="@mipmap/me_set"/>
        <ImageView
            android:id="@+id/me_owner_user_imageview"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/me_user_head"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/me_owner_user_imageview">
            <TextView
                android:id="@+id/me_owner_mypoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:textColor="@color/meuser"
                android:text="@string/mypoints"/>
            <TextView
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/common_bg"
                android:text="个性签名"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/me_owner_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/me_owner_mypoints"
                android:layout_marginLeft="20dp"
                android:textSize="@dimen/textsize_s"
                android:textColor="@color/meuser"
                android:text="@string/mydescription"/>
        </RelativeLayout>

    </RelativeLayout>
    <include
        layout="@layout/bottom_me_middle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">
        <TextView
            style="@style/me_content_notext"/>
        <TextView
            android:id="@+id/me_owner_linkman"
            style="@style/me_content_text"
            android:text="@string/linkman"/>
        <TextView
            style="@style/me_content_notext"/>
        <TextView
            android:id="@+id/me_owner_datemanage"
            style="@style/me_content_text"
            android:text="@string/datemanage"/>
        <TextView
            style="@style/me_content_notext"/>
        <TextView
            android:id="@+id/me_owner_myroom"
            style="@style/me_content_text"
            android:text="@string/myroom"/>
        <TextView
            style="@style/me_content_notext"/>
        <TextView
            android:id="@+id/me_owner_customerservice"
            style="@style/me_content_text"
            android:text="@string/customerservice"/>
        <TextView
            style="@style/me_content_notext"/>

    </LinearLayout>
</LinearLayout>