<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="#FFF"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@mipmap/me_userislogin_background">

        <ImageView
            android:id="@+id/me_customer_myset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:src="@mipmap/me_set"/>

        <ImageView
            android:id="@+id/me_customer_user_imageview"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/me_user_head"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/me_customer_user_imageview">

            <TextView
                android:id="@+id/me_customer_mypoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:text="@string/mypoints"
                android:textColor="@color/meuser"/>

            <TextView
                android:id="@+id/me_customer_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/me_customer_mypoints"
                android:layout_marginLeft="20dp"
                android:text="@string/mydescription"
                android:textColor="@color/meuser"/>
        </RelativeLayout>

    </RelativeLayout>

    <include
        layout="@layout/bottom_me_middle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            style="@style/me_content_notext"/>

        <TextView
            android:id="@+id/me_customer_linkman"
            style="@style/me_content_text"
            android:text="@string/linkman"/>

        <TextView
            style="@style/me_content_notext"/>

        <LinearLayout
            style="@style/me_content_text"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/me_customer_certification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/certification"
                android:textSize="@dimen/textsize_l"/>

            <TextView
                android:id="@+id/is_identify_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="200dp"
                android:text="已认证"
                android:textColor="@color/textDown"
                android:textSize="@dimen/textsize_m"/>

           <!-- <ImageView
                android:layout_gravity="center"
                android:id="@+id/is_identify_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/yes_realname"/>-->
        </LinearLayout>

        <TextView
            style="@style/me_content_notext"/>

        <TextView
            android:id="@+id/me_customer_releaseroom"
            style="@style/me_content_text"
            android:text="@string/releaseroom"/>

        <TextView
            style="@style/me_content_notext"/>

        <TextView
            android:id="@+id/me_customer_customerservice"
            style="@style/me_content_text"
            android:text="@string/customerservice"/>

        <TextView
            style="@style/me_content_notext"/>

    </LinearLayout>
</LinearLayout>